# orthogonal-neural-networks

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: lint.yaml
configs/: experiment.yaml
configs/data/: silverbox.yaml  static-affine.yaml  wh.yaml
src/: __init__.py  models.py  shared.py
