[project]
name = "orthogonal-neural-networks"
version = "1.0.0"
description = "Implementation for paper 'Orthogonal Transforms in Neural Networks Amount to Effective Regularization'"
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Krzysztof Zając", email = "krzysztof.zajac@pwr.edu.pl"}
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
line_length = 120
py_version = 312

[tool.mypy]
exclude = [
    'venv',
    '\.venv',
    '\.git',
    '__pycache__',
    'build',
    'dist',
    'tests',
]

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# source: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
